--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<script language="JavaScript">
-    // window.captureEvents(Event.KEYPRESS); lo fan tutti
-    window.onkeydown = pressed;
+<script type="javascript">
     window.document.onClick = clicked;
-    function pressed(e) { alert("Key pressed: " + e.which);}
-    function clicked() { alert(
-        Mouse Click! "); }
+    function clicked() { alert("Mouse Click!"); }
 </script>
 </head>
 <body>
